# plotutils

./: .gitignore  AUTHORS  COMPAT  CONTENTS  HISTORY  INSTALL.fonts  INSTALL.pkg  KNOWN_BUGS  LICENSE  Makefile-clang-intel  Makefile-gcc-arm  Makefile-gcc-intel  Makefile-gcov  Makefile-solaris-sparc  Makefile.am  Makefile.in  NEWS  ONEWS  PROBLEMS  README  README.fonts  THANKS  TODO  acconfig.h  aclocal.m4  api-doc  check.r  clean-gcov  compile  compile-time-versions  compile-zhu  config.guess  config.h.in  config.hin  configure  configure.ac  configure.in  debian-url  example-large.c  example-small.c  (+38 more)
debian-patches/: 01_AC_PROG_CXX.diff  14_manpage_spline  21_plot2svg_test.diff  series
doc/: Makefile.am  Makefile.in  README  colors.txt  demo-page  h-demo.c  h-fonts.doc  hershey-demo.c  hershey-fonts  hershey-number  hershey-numbering  hershey.bib  hershey.doc  kana.doc  kanji.doc
double/: Makefile.am  Makefile.in  double.c
fonts/: Makefile.am  Makefile.in  README  fonts.append  install-fonts  u_fonts.c
fonts/bdf/: Makefile.in
fonts/pcf/: Makefile.in  tekfont0.pcf  tekfont1.pcf  tekfont2.pcf  tekfont3.pcf
fonts/pfb/: Makefile.in  s050000l.pfb
getopt/: Makefile.in  getopt.c  getopt1.c
graph/: Makefile.am  Makefile.in  README  extern.h  graph.c  linemode.c  linemode.h  misc.c  plotter.c  reader.c
hersheydemo/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  fontlist.h  getopt.h  libcommon.h  plot.h  plotcompat.h  plotter.h  sys-defines.h
info/: Makefile.am  Makefile.in  ode.1  plot.1  plotfont.1  plotutils.info  plotutils.texi  spline.1  stamp-vti  tek2plot.1  texinfo.tex  version.texi
lib/: Makefile.am  Makefile.in  README  alloca.c  compat.c  display.c  fontlist.c  getopt.c  getopt1.c  xmalloc.c  xstrdup.c
libplot/: Makefile.am  Makefile.in  README  README-X  README-cgm  README-tek  README.fig  README.hpgl  VERSION  a_alab_ps.c  a_attribs.c  a_closepl.c  a_color.c  a_defplot.c  a_defstate.c  a_endpath.c  a_erase.c  a_openpl.c  a_path.c  a_point.c  a_text.c  api.c  apinewc.c  apioldc.c  apioldcc.c  b_closepl.c  b_defplot.c  b_erase.c  b_openpl.c  b_path.c  b_point.c  c_alab_ps.c  c_attribs.c  c_box.c  c_closepl.c  c_color.c  c_defplot.c  c_ellipse.c  c_emit.c  c_endpath.c  (+300 more)
libplotter/: Makefile.am  Makefile.in
libs/: DEDICATION  Makefile.in  README
libs/common/: README  affine.c  alabel.c  alabel_str.c  arc.c  arcrel.c  box.c  boxrel.c  capmod.c  circle.c  circlerel.c  color.c  colorname.c  colorname.h  concat.c  cont.c  contrel.c  control.h  controlify.c  dot.c  ellarc.c  ellipse.c  fakearc.c  fakearc.h  flushpl.c  fontdb.c  fontsize.c  her_glyphs.c  her_metrics.h  intfont.c  iso.c  jis.h  joinmod.c  label.c  labelwidth.c  line.c  linerel.c  linewidth.c  marker.c  markerrel.c  (+13 more)
libs/libplot/: Makefile.in  affine.c  alabel.c  arc.c  arcrel.c  box.c  boxrel.c  capmod.c  circle.c  circlerel.c  closepl.c  concat.c  cont.c  contrel.c  dot.c  ellarc.c  ellarcrel.c  ellipse.c  endpoly.c  erase.c  extern.h  fill.c  fillcolor.c  flushpl.c  fontname.c  fontsize.c  joinmod.c  label.c  line.c  (+17 more)
libxmi/: AUTHORS  CUSTOMIZE  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  configure  configure.ac  configure.in  extern.h  mi_arc.c  mi_gc.h  mi_spans.c  sys-defines.h  xmi.h
libxmi/info/: Makefile.in  libxmi.info  libxmi.texi
newer-results/: plots.r  results-macbookpro2-clang-9.0.0  results-macbookpro2-clang-9.0.0-no-opt  results-macbookpro2-gcc-10.2.0  results-macbookpro2-gcc-10.2.0-no-opt  results-thinkstation-clang-10.0.0  results-thinkstation-clang-10.0.0-no-opt  results-thinkstation-gcc-10.2.0  results-thinkstation-gcc-10.2.0-no-opt  run-macbookpro2  run-thinkstation  system-macbookpro2  system-thinkstation
ode/: Makefile.am  Makefile.in  README  am.c  ama.c  bessel.c  eu.c  expr.c  extern.h  float.c  global.c  gram.c  gram.h  gram.tab.h  gram.y  lex.c  lex.l  main.c  misc.c  num.h  ode.h  prt.c  rk.c  rka.c  specfun.c  stperr.c  sym.c  xmalloc.c  yywrap.c
ode-examples/: Makefile.in  README  atwoods.ode  atwoods.x  bead.ode  bead.x  chem.ode  chem.x  coupled.ode  coupled.x  ddho.ode  ddho.x  dynamo.ode  dynamo.x  henon.ode  henon.x  limitcycle.ode  limitcycle.x  lorenz.ode  lorenz.x  orbit.ode  orbit.x  population.ode  population.x  qcd.ode  qcd.x  rumor.ode  rumor.x  soliton.ode  soliton.x  viscous.ode  viscous.x
paper-results/: plots.r  results-apps-gcc-4.6.3  results-aspireV5-clang-3.5.0  results-aspireV5-gcc-4.8.2  results-cdf-gcc-4.6.3  results-cubox-gcc-4.8.4  results-dell-350-gcc-4.6.3  results-dell-530-gcc-4.8.1  results-dell-530-gcc-4.9.2  results-dell-T1600-clang-3.5.0  results-dell-T1600-gcc-4.9.2  results-dell-T7500-clang-3.4  results-dell-T7500-gcc-4.8.1  results-dell-gx200-clang-3.4  results-gateway-gcc-4.8.2  results-macbookpro-clang-3.6.0  results-sun-T5140  results-sun-V880  system-apps  system-aspireV5  system-cdf  system-comps  system-cubox  system-dell-T1600  system-macbookpro  system-macpro  system-pi  system-sun-T5140
pic2plot/: Makefile.am  Makefile.in  common.cc  common.h  gram.cc  gram.h  gram.yy  lex.cc  main.cc  object.cc  object.h  output.h  pic.h  plot.cc
pic2plot/doc/: Makefile.in  README
pic2plot/include/: Makefile.am  Makefile.in  cset.h  errarg.h  error.h  lib.h  position.h  posix.h  ptable.h  stringclass.h  text.h
pic2plot/libgroff/: Makefile.am  Makefile.in  assert.cc  errarg.cc  itoa.c  new.cc  string.cc
plot/: Makefile.am  Makefile.in  plot.c
plot2dev/: Makefile.in  README  plot.c
plotfont/: Makefile.am  Makefile.in  plotfont.c
spline/: Makefile.am  Makefile.in  spline.c
tek2plot/: Makefile.am  Makefile.in  README  tek2.c  tek2plot.c
tek2plot/teksamples/: Makefile.am  Makefile.in  README
test/: Makefile.am  Makefile.in  README  graph.test  graph.xout  ode.test  plot2cgm.xout  plot2fig.test  plot2fig.xout  plot2gif.test  plot2gif.xout  plot2hpgl.test  plot2hpgl.xout  plot2hpgl.yout  plot2pcl.xout  plot2pcl.yout  plot2plot.test  plot2plot.xout  plot2ps.test  plot2ps.xout  plot2svg.xout  plot2tek.xout  spline.test  tek2plot.test  tek2plot.xout  update-xout  update-yout
(+100 files in other folders)
