## Makefile.am for plotutils.
## Process this file with automake to produce Makefile.in in all directories.

# graph, plot, and tek2plot are linked with libplot.
# spline, double, and ode are not, however.  All use the routines in lib.
SUBDIRS = lib spline double ode ode-examples libplot plot tek2plot plotfont graph include info doc fonts test

# files with nonstandard names in this directory
EXTRA_DIST = COMPAT INSTALL.pkg INSTALL.fonts KNOWN_BUGS ONEWS PROBLEMS
