libplotdatadir = $(datadir)/libplot
libplotdata_DATA = README colors.txt demo-page hershey-demo.c hershey-number hershey.bib hershey.doc kana.doc kanji.doc

# files with nonstandard names in this directory
EXTRA_DIST = colors.txt demo-page hershey-demo.c hershey-number hershey.bib hershey.doc kana.doc kanji.doc
